--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Rudaw";
+  src: url("./assets/fonts/rudawregular.ttf") format("truetype");
+}
+
 @layer base {
   html {
-    font-family: "Poppins", sans-serif !important;
-    font-feature-settings: "kern" !important;
     -webkit-font-smoothing: antialiased;
     letter-spacing: -0.5px;
   }
